// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defState() > creates state with initial value 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "a",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > handles array state 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Items: a",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > handles boolean state 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Flag: false",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > handles null state 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Val: null",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > handles object state 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "User: Alice, 30",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > persists state across re-executions 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "abc",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > state proxy works in templates 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Value: test",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "a",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > supports multiple state variables 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "1 2 3",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > updates state with direct value 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Val: init",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`defState() > updates state with function 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "ab",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;
